--- a/index.html
+++ b/index.html
@@ -4,77 +4,44 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
-  <!--<![endif]-->
+<!--<![endif]-->
 
-  <html lang="en-US" prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
-    <!--<![endif]-->
-    <head>
-      <meta charset="UTF-8" />
-      <meta
-        name="viewport"
-        content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"
-      />
-      <meta property="og:title" content="My Title" />
-      <meta
-        property="og:image"
-        content="URL to the image you want in the preview, LinkedIn recommends a 1.91:1 ratio (1200x627px)"
-      />
-      <meta
-        property="og:description"
-        content="This should be a very short description"
-      />
-      <meta
-        name="twitter:card"
-        content="summary || summary_large_image || player || app"
-      />
-      <meta name="twitter:creator" content="@username-example" />
+<html lang="en-US" prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb#">
+<!--<![endif]-->
 
-      <title>JOEL DOMBEK DESIGN</title>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+    <meta property="og:title" content="My Title" />
+    <meta property="og:image" content="URL to the image you want in the preview, LinkedIn recommends a 1.91:1 ratio (1200x627px)" />
+    <meta property="og:description" content="This should be a very short description" />
+    <meta name="twitter:card" content="summary || summary_large_image || player || app" />
+    <meta name="twitter:creator" content="@username-example" />
 
-      <link
-        rel="stylesheet"
-        href="https://joeldom.github.io/redesign/greybox/css/coma.css"
-      />
-      <link rel="stylesheet" href="./css/tao.css" />
-      <!-- Font Links -->
-      <link
-        rel="stylesheet"
-        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-      />
-      <link
-        rel="stylesheet"
-        href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css"
-      />
-      <link
-        rel="stylesheet"
-        href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      />
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
-      <!-- <link rel="stylesheet" href="css/breadcrumb.css"> -->
-      <link rel="shortlink" href="https://www.joeldombek.com/" />
-      <!-- Top Scripts -->
-      <script src="https://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
-      <script
-        type="text/javascript"
-        src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"
-      ></script>
-      <script
-        type="text/javascript"
-        src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"
-      ></script>
-      <script
-        type="text/javascript"
-        src="https://joeldom.github.io/redesign/greybox/js/typed.min.js"
-      ></script>
-      <script src="https://unpkg.com/freezeframe/dist/freezeframe.min.js"></script>
-      <link rel="stylesheet" href="https://unpkg.com/freezeframe@3.0.10/build/css/freezeframe_styles.min.css">
-    </head>
-    <body
-      class="home page page-template page-template-template_home page-template-template_home-php margin-para"
-    >
-      <div class="wrapper">
+    <title>JOEL DOMBEK DESIGN 🔥</title>
+
+    <link rel="stylesheet" href="https://joeldom.github.io/redesign/greybox/css/coma.css" />
+    <link rel="stylesheet" href="./css/tao.css" />
+    <!-- Font Links -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="css/breadcrumb.css"> -->
+    <link rel="shortlink" href="https://www.joeldombek.com/" />
+    <!-- Top Scripts -->
+    <script src="https://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
+    <script type="text/javascript" src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
+    <script type="text/javascript" src="https://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
+    <script type="text/javascript" src="https://joeldom.github.io/redesign/greybox/js/typed.min.js"></script>
+    <script src="https://unpkg.com/freezeframe/dist/freezeframe.min.js"></script>
+    <link rel="stylesheet" href="https://unpkg.com/freezeframe@3.0.10/build/css/freezeframe_styles.min.css">
+</head>
+
+<body class="home page page-template page-template-template_home page-template-template_home-php margin-para">
+    <div class="wrapper">
         <!-- Nav Section -->
         <!-- <div id="navbar" class="navbar navbar-fixed-top headroom" role="banner">
           <div class="">
@@ -158,90 +125,62 @@
         <!-- / Nav Section -->
 
         <div class="toggle">
-          <div class="container-fluid">
-            <button
-              href="#collapse1"
-              class="quote-toggle"
-              style="z-index: 999;"
-            >
+            <div class="container-fluid">
+                <button href="#collapse1" class="quote-toggle" style="z-index: 999;">
               Collapse section &nbsp;<i class="material-icons">clear</i>
             </button>
-          </div>
+            </div>
         </div>
-      </div>
-      <!--/wrapper-->
+    </div>
+    <!--/wrapper-->
 
-      <div id="collapse1" class="container-fluid palette-darkolive pattern-bg">
+    <div id="collapse1" class="container-fluid palette-darkolive pattern-bg">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
-          <div class="col-xs-12 col-sm-4">
-            <section class="tile-spacer">
-              <p>
-                &emsp;
-              </p>
-            </section>
-            <br class="gap visible-lg" />
-          </div>
-          <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
+            <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
+            <div class="col-xs-12 col-sm-4">
+                <section class="tile-spacer">
+                    <p>
+                        &emsp;
+                    </p>
+                </section>
+                <br class="gap visible-lg" />
+            </div>
+            <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
         </div>
         <div class="row">
-          <div
-            class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg"
-          >
-            &emsp;
-          </div>
-          <div class="col-xs-12 col-sm-8 col-md-4">
-            <section class="tile-splash first">
-              <a href="https://www.joeldombek.com/">
-                <p>
-                  JOEL<strong>DOMBEK</strong> /名前
-                  <!-- <span class="tile-detail">v1.2.17</span> -->
-                  <svg
-                    focusable="false"
-                    preserveAspectRatio="xMidYMid meet"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="red"
-                    aria-hidden="true"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20"
-                    class=""
-                  >
+            <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                &emsp;
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-4">
+                <section class="tile-splash first">
+                    <a href="https://www.joeldombek.com/">
+                        <p>
+                            JOEL<strong>DOMBEK</strong> /名前
+                            <!-- <span class="tile-detail">v1.2.17</span> -->
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="red" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="">
                     <!---->
                     <path
                       d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
                     ></path>
                   </svg>
-                </p>
-              </a>
-            </section>
-            <br class="gap visible-md visible-lg" />
-          </div>
-          <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
+                        </p>
+                    </a>
+                </section>
+                <br class="gap visible-md visible-lg" />
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-12 col-lg-12">&emsp;</div>
         </div>
         <div class="row">
-          <div
-            class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg"
-          >
-            &emsp;
-          </div>
-          <div class="col-xs-12 col-sm-8 col-md-4">
-            <section class="tile-splash">
-              <a href="https://joeldom.github.io/redesign/">
-                <p>
-                  SITE /地点
-                  <span class="tile-detail">v2.1.23</span><br>
-                  <svg
-                    focusable="false"
-                    preserveAspectRatio="xMidYMid meet"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="#1a3acc"
-                    aria-hidden="true"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20"
-                    class="inline"
-                  >
+            <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                &emsp;
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-4">
+                <section class="tile-splash">
+                    <a href="https://joeldom.github.io/redesign/">
+                        <p>
+                            SITE /地点
+                            <span class="tile-detail">v2.1.23</span><br>
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline">
                     <!---->
                     <path
                       d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"
