--- a/beyond/terms.html
+++ b/beyond/terms.html
@@ -4,11 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSON Terms Display</title>
+    <link rel="stylesheet" href="css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://joeldom.github.io/redesign/greybox/css/coma.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://joeldom.github.io/redesign/css/tao.css"
+    />
   </head>
   <body>
     <h1>JSON Terms</h1>
     <ul id="termList"></ul>
-    <!-- Adjust the path based on your directory structure -->
+    <button id="pauseButton">Pause</button>
     <script src="js/script.js"></script>
   </body>
 </html>
