--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -42,6 +42,7 @@
     <!--/wrapper-->
 
     <div id="collapse1" class="container-fluid palette-darkolive pattern-bg">
+      <div class="scroll-pane">
         <div class="row">
             <div class="col-xs-12 col-sm-4 visible-md visible-lg">&emsp;</div>
             <div class="col-xs-12 col-sm-4">
@@ -140,10 +141,10 @@
             </div>
             <div class="col-xs-12 col-sm-8 col-md-4">
                 <section class="tile-splash tile-last">
-                    <a href="https://joeldom.github.io/redesign/beyond/">
+                    <a href="https://joeldom.github.io/redesign/sandbox/">
                         <p>
-                            SANDBOX /遊び場
-                            <span class="tile-detail">v1.2.17</span><br>
+                            PROJECT: CATYLIST
+                            <span class="tile-detail">v1.1.1</span><br>
                             <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline">
                               <path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
                             </svg>
@@ -155,18 +156,41 @@
             <div class="col-xs-12 col-sm-4">&emsp;</div>
         </div>
         <div class="row">
-            <div class="col-xs-12 col-sm-4">&emsp;</div>
-            <div class="col-xs-12 col-sm-8 col-sm-pull-2 col-md-8 col-md-pull-2 padding-left-large padding-right-large">
-                <figure class="quote">
-                    <br class="gap" />
-                    <blockquote class="h2" style="text-align: center;">
-                        When ever you want to, you can change everything.
-                    </blockquote>
-                </figure>
-                <br class="gap" /><br class="gap" /><br class="gap" />
+            <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                &emsp;
+            </div>
+            <div class="col-xs-12 col-sm-8 col-md-4">
+                <section class="tile-splash tile-last">
+                    <a href="https://joeldom.github.io/redesign/beyond/">
+                        <p>
+                            PROJECT: ECCO
+                            <span class="tile-detail">v1.1.1</span><br>
+                            <svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20" class="inline">
+                              <path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                            </svg>
+                        </p>
+                    </a>
+                </section>
+                <br class="gap visible-lg" />
             </div>
             <div class="col-xs-12 col-sm-4">&emsp;</div>
         </div>
+
+      </div>
+      <!-- scroll-pane -->
+      <div class="row">
+          <div class="col-xs-12 col-sm-4">&emsp;</div>
+          <div class="col-xs-12 col-sm-8 col-sm-pull-2 col-md-8 col-md-pull-2 padding-left-large padding-right-large">
+              <figure class="quote">
+                  <br class="gap" />
+                  <blockquote class="h2" style="text-align: center;">
+                      When ever you want to, you can change everything.
+                  </blockquote>
+              </figure>
+              <br class="gap" /><br class="gap" /><br class="gap" />
+          </div>
+          <div class="col-xs-12 col-sm-4">&emsp;</div>
+      </div>
     </div>
 
     <div class="footer-para">
