--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -41,6 +41,7 @@
                                 <li class=""><a href="#">Brand</a></li>
                                 <li class=""><a href="#">Web</a></li>
                                 <li class=""><a href="#">Interface</a></li>
+                                <li class=""><a href="#">Photography</a></li>
                                 <li class=""><a href="#">Print</a></li>
                             </ul>
                         </li>
@@ -82,15 +83,15 @@
             <!-- <span href="#menu" class="trinav"></span> -->
             <span href="#menu" class="ventnav">
               <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-              <path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#CDCDCD"/>
-              <path d="M7.77636 9.42798V17.1672H0.0371094L7.77636 9.42798Z" fill="#CDCDCD"/>
-              <path d="M7.77636 18.0583V25.7976H0.0371094L7.77636 18.0583Z" fill="#CDCDCD"/>
-              <path d="M16.4067 0.797607V8.53684H8.66748L16.4067 0.797607Z" fill="#CDCDCD"/>
-              <path d="M16.4067 9.42798V17.1672H8.66748L16.4067 9.42798Z" fill="#CDCDCD"/>
-              <path d="M16.4067 18.0583V25.7976H8.66748L16.4067 18.0583Z" fill="#CDCDCD"/>
-              <path d="M25.0371 0.797607V8.53684H17.2979L25.0371 0.797607Z" fill="#CDCDCD"/>
-              <path d="M25.0371 9.42798V17.1672H17.2979L25.0371 9.42798Z" fill="#CDCDCD"/>
-              <path d="M25.0371 18.0583V25.7976H17.2979L25.0371 18.0583Z" fill="#CDCDCD"/>
+              <path d="M7.77636 0.797607V8.53684H0.0371094L7.77636 0.797607Z" fill="#C5C5C5"/>
+              <path d="M7.77636 9.42798V17.1672H0.0371094L7.77636 9.42798Z" fill="#C5C5C5"/>
+              <path d="M7.77636 18.0583V25.7976H0.0371094L7.77636 18.0583Z" fill="#C5C5C5"/>
+              <path d="M16.4067 0.797607V8.53684H8.66748L16.4067 0.797607Z" fill="#C5C5C5"/>
+              <path d="M16.4067 9.42798V17.1672H8.66748L16.4067 9.42798Z" fill="#C5C5C5"/>
+              <path d="M16.4067 18.0583V25.7976H8.66748L16.4067 18.0583Z" fill="#C5C5C5"/>
+              <path d="M25.0371 0.797607V8.53684H17.2979L25.0371 0.797607Z" fill="#C5C5C5"/>
+              <path d="M25.0371 9.42798V17.1672H17.2979L25.0371 9.42798Z" fill="#C5C5C5"/>
+              <path d="M25.0371 18.0583V25.7976H17.2979L25.0371 18.0583Z" fill="#C5C5C5"/>
               </svg>
             </span>
           </button>
@@ -258,7 +259,7 @@
                         </a>
                         <div class="col-xs-12 col-sm-4 hidden-sm hidden-md hidden-lg">&nbsp;</div>
                         <div class="col-xs-12 col-sm-6">
-                            <span>This is the portfolio &amp; blog of Joel Dombek who has 10+ years experience in: logo design, brand identity, graphic design, advertising, marketing, web design, and UX design. Read the rest of my <a href="#">Resume</a> here.</span>
+                            <span>This is the portfolio &amp; blog of Joel Dombek who has 10+ years experience in: logo design, brand identity, graphic design, advertising, marketing, web design, and UX design. Read the rest of my <a href="https://joeldom.github.io/resume/" target="_blank">Resume</a> here.</span>
                             <ul class="list-unstyled hidden-sm hidden-md hidden-lg">
                                 <li><a href="https://joeldom.github.io/">Home</a></li>
                                 <li><a href="https://joeldom.github.io/work">Work</a></li>
@@ -307,7 +308,7 @@
                                 </div>
                                 <div class="col-sm-4 col-xs-12">
                                     <p class="text-right">
-                                        JOEL<strong>DOMBEK</strong><br class="hidden-xs" /> <small> &copy; 2023 <br class="hidden-sm"/>v8.11.13.23<br class="hidden-xs" /></small>
+                                        JOEL<strong>DOMBEK</strong><br class="hidden-xs" /> <small> &copy;2023 <br class="hidden-sm"/>v8.11.13.23<br class="hidden-xs" /></small>
                                     </p>
                                     <br /><br /><br />
                                 </div>
@@ -320,6 +321,36 @@
     </div>
     <script src="../greybox/js/main.js"></script>
     <script src="../js/sandbox.js"></script>
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+
+    <!-- Google tag (gtag.js) -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCY50JK5BC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-VCY50JK5BC');
+    </script> -->
+
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-28TENMJVGD"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-28TENMJVGD');
+    </script>
+
+
 </body>
 
 </html>
