--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           </div>
           <div class="col-xs-12 col-sm-8 col-md-4">
             <section class="tile-splash tile-last">
-              <a href="https://joeldom.github.io/redesign/beyond/">
+              <a href="https://joeldom.github.io/redesign/sandbox/">
                 <p>
                   SANDBOX /遊び場
                   <span class="tile-detail">v1.2.17</span><br>
