env tracking codes added to sandbox

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -323,7 +323,7 @@
     <script src="../js/sandbox.js"></script>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 
-    <!-- Google tag (gtag.js) -->
+    <!-- BASE Google tag (gtag.js) -->
     <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCY50JK5BC"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -336,9 +336,8 @@
         gtag('config', 'G-VCY50JK5BC');
     </script> -->
 
-
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-28TENMJVGD"></script>
+    <!-- REDESIGN Google tag (gtag.js) -->
+    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-28TENMJVGD"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
 
@@ -348,7 +347,21 @@
         gtag('js', new Date());
 
         gtag('config', 'G-28TENMJVGD');
+    </script> -->
+
+    <!-- SANDBOX Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9GLG41WK0"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-D9GLG41WK0');
     </script>
+
 
 
 </body>
