box-shadow termContainer css

--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -223,13 +223,16 @@
         </div>
         <!-- scroll-pane -->
         <div class="row">
+            <div class="col-xs-12">
+                <h2>
+                    <div id="term-container" style="text-align: center;">Loading...</div>
+                </h2>
+            </div>
+        </div>
+        <div class="row">
             <div class="col-xs-12 col-sm-4">&emsp;</div>
             <div class="col-xs-12 col-sm-8 col-sm-pull-2 col-md-8 col-md-pull-2 padding-left-large padding-right-large">
                 <figure class="quote">
-                    <br class="gap" />
-                    <h2>
-                        <div id="term-container" style="text-align: center;">Loading...</div>
-                    </h2>
                     <blockquote class="h2" style="text-align: center;">
                         When ever you want to, you can change everything.
                     </blockquote>
