--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -19,8 +19,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
     <script src="http://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
-    <script type="text/javascript" src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
-    <script type="text/javascript" src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
+    <script src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery.js?ver=1.11.3"></script>
+    <script src="http://www.joeldombek.com/blog/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.2.1"></script>
 </head>
 
 <body class="parallax">
@@ -172,7 +172,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">&emsp;</div>
                 <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash tile-last">
+                    <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/beyond/">
                             <p>
                                 SANDBOX /遊び場 <span class="tile-detail">v1.2.17</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
@@ -189,7 +189,7 @@
                     &emsp;
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash tile-last">
+                    <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/sandbox/">
                             <p>
                                 project: catalyst <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
@@ -206,7 +206,7 @@
                     &emsp;
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-4">
-                    <section class="tile-splash tile-last">
+                    <section class="tile-splash">
                         <a href="https://joeldom.github.io/redesign/beyond/">
                             <p>
                                 project: ECCO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
@@ -219,7 +219,24 @@
                 </div>
                 <div class="col-xs-12 col-sm-4">&emsp;</div>
             </div>
-
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash tile-last">
+                        <a href="https://joeldom.github.io/redesign/beyond/layer">
+                            <p>
+                                project: layer.EXE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
         </div>
         <!-- scroll-pane -->
         <div class="row">
@@ -262,7 +279,7 @@
                         </a>
                         <div class="col-xs-12 col-sm-4 hidden-sm hidden-md hidden-lg">&nbsp;</div>
                         <div class="col-xs-12 col-sm-6">
-                            <span>This is the portfolio &amp; blog of Joel Dombek who has 10+ years experience in: logo design, brand identity, graphic design, advertising, marketing, web design, and UX design. Read the rest of my <a href="https://joeldom.github.io/resume/" target="_blank">Resume</a> here.</span>
+                            <span>The portfolio and blog of Joel Dombek, a professional with over a decade of expertise in logo design, brand identity, graphic design, advertising, marketing, web design, and UX design. Find additional details in my <a href="https://joeldom.github.io/resume/" target="_blank">Resume</a>.</span>
                             <ul class="list-unstyled hidden-sm hidden-md hidden-lg">
                                 <li><a href="https://joeldom.github.io/">Home</a></li>
                                 <li><a href="https://joeldom.github.io/work">Work</a></li>
@@ -286,7 +303,7 @@
                                             <a href="https://joeldom.github.io/style-guide/" target="_blank"><span class="hidden-xs">Style&nbsp;Guide</span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/in/joel-dombek-6b056828/" target="_blank"><span class="hidden-xs">LinkedIn</span></a>
+                                            <a href="https://www.linkedin.com/in/joel-dombek-6b056828/" target="_blank"><span class="hidden-xs">Linkedin</span></a>
                                         </li>
                                         <li>
                                             <a href="https://joeldom.github.io/resume/"><span class="hidden-xs">Resume</span></a>
@@ -299,19 +316,16 @@
                                             <a href="https://www.instagram.com/joeld/" target="_blank"><span class="hidden-xs">Instagram</span></a>
                                         </li>
                                         <li>
-                                            <a href="https://twitter.com/joeldombek" target="_blank"><span class="hidden-xs">Twitter</span></a>
+                                            <a href="https://www.twitch.tv/joeldombek" target="_blank"><span class="hidden-xs">TwitchTV</span></a>
                                         </li>
                                         <li>
-                                            <a href="https://www.linkedin.com/in/joel-dombek-6b056828/" target="_blank"><span class="hidden-xs">LinkedIn</span></a>
-                                        </li>
-                                        <li>
-                                            <a href="https://joeldom.github.io/resume/"><span class="hidden-xs"> Resume</span></a>
+                                            <a href="https://www.youtube.com/channel/UCc6vtfZ6Ln5i2ujRzisK_yA" target="_blank"><span class="hidden-xs">Youtube</span></a>
                                         </li>
                                     </ul>
                                 </div>
                                 <div class="col-sm-4 col-xs-12">
                                     <p class="text-right">
-                                        JOEL<strong>DOMBEK</strong><br class="hidden-xs" /> <small> &copy;2023 <br class="hidden-sm"/>v8.11.13.23<br class="hidden-xs" /></small>
+                                        JOEL<strong>DOMBEK</strong><br class="hidden-xs" /> <small> &copy;2024 <br class="hidden-sm"/>v8.11.14.23<br class="hidden-xs" /></small>
                                     </p>
                                     <br /><br /><br />
                                 </div>
@@ -322,7 +336,8 @@
             </div>
         </div>
     </div>
-    <script src="../greybox/js/main.js"></script>
+    <script src="https://joeldom.github.io/redesign/greybox/js/main.js"></script>
+    <!-- <script src="../greybox/js/main.js"></script> -->
     <script src="../js/sandbox.js"></script>
     <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 
