--- a/sandbox/layers/index.html
+++ b/sandbox/layers/index.html
@@ -9,12 +9,12 @@
     <meta name="twitter:card" content="summary || summary_large_image || player || app" />
     <meta name="twitter:creator" content="@joeldombek" />
 
-    <title>SANDBOX 🔥</title>
+    <title>LAYERS</title>
 
-    <link rel="stylesheet" href="../greybox/css/coma.css" />
-    <link rel="stylesheet" href="../css/tao.css" />
-    <link rel="stylesheet" href="../css/lib.css" />
-    <link rel="stylesheet" href="../css/sandbox.css" />
+    <link rel="stylesheet" href="../../greybox/css/coma.css" />
+    <link rel="stylesheet" href="../../css/tao.css" />
+    <link rel="stylesheet" href="../../css/lib.css" />
+    <link rel="stylesheet" href="../../css/sandbox.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-8 col-md-4">
                     <section class="tile-splash tile-last">
-                        <a href="https://joeldom.github.io/redesign/sandbox/layers">
+                        <a href="https://joeldom.github.io/redesign/beyond/layer">
                             <p>
                                 project: layer.EXE <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
                                     class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
@@ -337,35 +337,8 @@
         </div>
     </div>
     <script src="https://joeldom.github.io/redesign/greybox/js/main.js"></script>
-    <!-- <script src="../greybox/js/main.js"></script> -->
-    <script src="../js/sandbox.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-
-    <!-- BASE Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-VCY50JK5BC"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-VCY50JK5BC');
-    </script> -->
-
-    <!-- REDESIGN Google tag (gtag.js) -->
-    <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-28TENMJVGD"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'G-28TENMJVGD');
-    </script> -->
+    <!-- <script src="../../greybox/js/main.js"></script> -->
+    <script src="../../js/sandbox.js"></script>
 
     <!-- SANDBOX Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9GLG41WK0"></script>
