--- a/sandbox/absolute.html
+++ b/sandbox/absolute.html
@@ -3,19 +3,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <meta property="og:title" content="My Title" />
-    <meta property="og:image" content="URL to the image you want in the preview, LinkedIn recommends a 1.91:1 ratio (1200x627px)" />
-    <meta property="og:description" content="This should be a very short description" />
-    <meta name="twitter:card" content="summary || summary_large_image || player || app" />
-    <meta name="twitter:creator" content="@joeldombek" />
 
-    <title>LAYERS</title>
+    <title>ABSOLUTE</title>
 
-    <link rel="stylesheet" href="../../greybox/css/coma.css" />
-    <link rel="stylesheet" href="../../css/tao.css" />
-    <link rel="stylesheet" href="../../css/lib.css" />
-    <link rel="stylesheet" href="../../css/sandbox.css" />
-
+    <link href="http://joeldom.github.io/redesign/greybox/css/coma.css" rel="stylesheet" />
+    <link href="http://joeldom.github.io/redesign/css/tao.css" rel="stylesheet" />
+    <link href="http://joeldom.github.io/redesign/css/lib.css" rel="stylesheet" />
+    <link href="http://joeldom.github.io/redesign/css/sandbox.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
 
     <script src="http://joeldom.github.io/14-redesign/js/modernizr.min.js"></script>
@@ -337,9 +331,8 @@
         </div>
     </div>
     <script src="https://joeldom.github.io/redesign/greybox/js/main.js"></script>
-    <!-- <script src="../../greybox/js/main.js"></script> -->
-    <script src="../../js/sandbox.js"></script>
-
+    <!-- <script src="http://joeldom.github.io/redesign/greybox/js/main.js"></script> -->
+    <script src="http://joeldom.github.io/redesign/js/sandbox.js"></script>
     <!-- SANDBOX Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-D9GLG41WK0"></script>
     <script>
@@ -352,9 +345,6 @@
 
         gtag('config', 'G-D9GLG41WK0');
     </script>
-
-
-
 </body>
 
 </html>
