--- a/sandbox/layers/index.html
+++ b/sandbox/layers/index.html
@@ -237,6 +237,24 @@
                 </div>
                 <div class="col-xs-12 col-sm-4">&emsp;</div>
             </div>
+            <div class="row">
+                <div class="col-xs-12 col-sm-2 col-md-4 visible-sm visible-md visible-lg">
+                    &emsp;
+                </div>
+                <div class="col-xs-12 col-sm-8 col-md-4">
+                    <section class="tile-splash">
+                        <a href="https://joeldom.github.io/redesign/sandbox/absolute">
+                            <p>
+                                project: ABSO <span class="tile-detail">v1.1.1</span><br><svg focusable="false" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg" fill="#1a3acc" aria-hidden="true" width="20" height="20" viewBox="0 0 20 20"
+                                    class="inline"><path d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path></svg>
+                            </p>
+                            <!-- <img src="img/Parallax_Example.png" /> -->
+                        </a>
+                    </section>
+                    <br class="gap visible-lg" />
+                </div>
+                <div class="col-xs-12 col-sm-4">&emsp;</div>
+            </div>
         </div>
         <!-- scroll-pane -->
         <div class="row">
